Add navbar and footer, add basic causes page, add img alt info

--- a/public_html/html_project/index.html
+++ b/public_html/html_project/index.html
@@ -15,51 +15,109 @@
 		<link rel="stylesheet" href="home.css" />
 	</head>
 	<body>
-		<main>
-			<section id="header">
-				<h2>We only have ONE earth.</h2>
-				<h1>What's happening?</h1>
-				<h1><span class="emphasis">Climate Change</span></h1>
-				<ul>
-					<li>Higher mortality Rates</li>
-					<li>Sea ice melting</li>
-					<li>Sea level rise</li>
-					<li>Car dependency</li>
-					<li>Increased cost of living</li>
-					<li>Uncompetitive practicies</li>
-					<li>Respitory illness</li>
-					<li>Weaker national economy</li>
-					<li>Innefficient infrastructure</li>
-				</ul>
-				<h1>And so much more!</h1>
-			</section>
+		<nav>
+			<div class="inner">
+				<a id="home_page_link" class="current_page" href="index.html"
+					>Lenny's Environmental Resources</a
+				>
+				<a href="proof.html">Proof</a>
+				<a href="causes.html">Causes</a>
+				<a href="effects.html">Effects</a>
+				<a href="solutions.html">Solutions</a>
+			</div>
+		</nav>
 
+		<main>
+			<h2>We only have <span class="color_emphasis">ONE</span> earth.</h2>
+			<h1>What's happening?</h1>
+			<h1><span class="emphasis">Climate Change</span></h1>
+			<h2>Tap an image to learn more!</h2>
 			<section id="four_boxes_parent">
 				<div class="part">
-					<img id="chart" width="800px" src="chart.jpg" />
+					<img
+						id="chart"
+						width="800px"
+						src="chart.jpg"
+						alt="Atmospheric Carbon Dioxide has never been seen at current levels."
+					/>
 					<div class="label">
 						<h1>Proof</h1>
 					</div>
 				</div>
 				<div class="part">
-					<img id="chart" width="800px" src="traffic.webp" />
+					<img
+						id="chart"
+						width="800px"
+						src="traffic.webp"
+						alt="Lots of traffic on highways."
+					/>
 					<div class="label">
 						<h1>Causes</h1>
 					</div>
 				</div>
 				<div class="part">
-					<img id="chart" width="800px" src="smog.jpg" />
+					<img
+						id="chart"
+						width="800px"
+						src="smog.jpg"
+						alt="Many cities are full of smog."
+					/>
 					<div class="label">
 						<h1>Effects</h1>
 					</div>
 				</div>
 				<div class="part">
-					<img id="chart" width="800px" src="neighborhood.jpg" />
+					<img
+						id="chart"
+						width="800px"
+						src="neighborhood.jpg"
+						alt="New walkable development that is enjoyable."
+					/>
 					<div class="label">
 						<h1>Solutions</h1>
 					</div>
 				</div>
 			</section>
+			<h1>What else?</h1>
+			<ul>
+				<li>Higher mortality Rates</li>
+				<li>Sea ice melting</li>
+				<li>Sea level rise</li>
+				<li>Car dependency</li>
+				<li>Increased cost of living</li>
+				<li>Uncompetitive practicies</li>
+				<li>Respitory illness</li>
+				<li>Weaker national economy</li>
+				<li>Innefficient infrastructure</li>
+			</ul>
+			<h1>And so much more!</h1>
 		</main>
+
+		<footer>
+			<div class="inner">
+				<div id="footer_left">
+					<p>
+						This site is by Lenny Metlitsky, in Ms. Mouzakitis' PD9
+						class.
+					</p>
+					<p>
+						Contact me by email:
+						<a href="mailto:lmetlitsky50@stuy.edu"
+							>lmetlitsky50@stuy.edu</a
+						>
+					</p>
+					<p>
+						Copyright:
+						<a href="https://mit-license.org/"
+							>Free and Open Source. MIT License.</a
+						>
+					</p>
+				</div>
+				<div id="footer_right">
+					<p>Date of Creation: 3/12/2023</p>
+					<p><a href="index.html">Go back home</a></p>
+				</div>
+			</div>
+		</footer>
 	</body>
 </html>
