Move images to img folder and work on causes page

--- a/public_html/html_project/causes.html
+++ b/public_html/html_project/causes.html
@@ -28,7 +28,84 @@
 		</nav>
 
 		<main>
-			<h1>Causes of Climate Change</h1>
+			<section id="header">
+				<h1>Causes of Climate Change</h1>
+				<h2>Emission of Greenhouse Gases.</h2>
+			</section>
+
+			<h3>
+				(such as, but are not limited to, carbon dioxide, methane, and
+				nitrous oxide)
+			</h3>
+			<h2>But what contributes to Greenhoue Gas emissions?</h2>
+			<p>
+				The sheer amount of human-made emissions in the atmosphere are
+				trapping and slowing heat loss to space - this effect of
+				trapping heat is known as the "greenhouse effect".
+			</p>
+			<h2>
+				How are greenhouse gases emitted? Through the combustion of
+				fossil fuels.
+			</h2>
+			<p>
+				"Over the last century, burning of fossil fuels like coal and
+				oil has increased the concentration of atmospheric carbon
+				dioxide (CO2). This increase happens because the coal or oil
+				burning process combines carbon with oxygen in the air to make
+				CO2. To a lesser extent, clearing of land for agriculture,
+				industry, and other human activities has increased
+				concentrations of greenhouse gases." -&nbsp<a
+					href="https://climate.nasa.gov/causes/#otp_the_greenhouse_effect"
+					>NASA</a
+				>
+			</p>
+			<h2>Where do our Greenhouse Gas emissions come from?</h2>
+			<img
+				id="pie_chart"
+				src="img/ghg.webp"
+				width="1000px"
+				alt="Pie chart demonstrating that transportation, electric power, industry, commerical and residential, and agricultural economic sectors emit the most greenhouse gases."
+			/>
+			<h2>
+				How have our greenhouse gas emissions (concentrations) changed
+				over time?
+			</h2>
+			<div id="increasing_concentration_parent">
+				<img
+					id="concentration_graph"
+					src="img/ghg_concentrations.png"
+					alt="Global atmospheric greenhouse gas concentrations increasing over time."
+				/>
+
+				<h2 id="ipcc_quote">
+					"It is unequivocal that human influence has warmed the
+					atmosphere, ocean and land." -&nbsp;<a
+						href="https://www.ipcc.ch/"
+						>Intergovernmental Panel on Climate Change</a
+					>
+				</h2>
+			</div>
+
+			<section id="sources">
+				<h2>Sources:</h2>
+				<p>
+					<a
+						href="https://www.epa.gov/climatechange-science/causes-climate-change"
+						>www.epa.gov/climatechange-science/causes-climate-change</a
+					>
+				</p>
+				<p>
+					<a
+						href="https://www.nationalgeographic.com/environment/article/greenhouse-gases"
+						>www.nationalgeographic.com/environment/article/greenhouse-gases</a
+					>
+				</p>
+				<p>
+					<a href="https://climate.nasa.gov/causes/"
+						>climate.nasa.gov/causes/</a
+					>
+				</p>
+			</section>
 		</main>
 
 		<footer>
