--- a/public_html/html_project/index.html
+++ b/public_html/html_project/index.html
@@ -37,7 +37,7 @@
 					<img
 						id="chart"
 						width="800px"
-						src="chart.jpg"
+						src="img/chart.jpg"
 						alt="Atmospheric Carbon Dioxide has never been seen at current levels."
 					/>
 					<div class="label">
@@ -48,7 +48,7 @@
 					<img
 						id="chart"
 						width="800px"
-						src="traffic.webp"
+						src="img/traffic.webp"
 						alt="Lots of traffic on highways."
 					/>
 					<div class="label">
@@ -59,7 +59,7 @@
 					<img
 						id="chart"
 						width="800px"
-						src="smog.jpg"
+						src="img/smog.jpg"
 						alt="Many cities are full of smog."
 					/>
 					<div class="label">
@@ -70,7 +70,7 @@
 					<img
 						id="chart"
 						width="800px"
-						src="neighborhood.jpg"
+						src="img/neighborhood.jpg"
 						alt="New walkable development that is enjoyable."
 					/>
 					<div class="label">
