Improve styling on causes page and for navbar

--- a/public_html/html_project/causes.html
+++ b/public_html/html_project/causes.html
@@ -30,7 +30,7 @@
 		<main>
 			<section id="header">
 				<h1>Causes of Climate Change</h1>
-				<h2>Emission of Greenhouse Gases.</h2>
+				<h1 class="emphasis">Emission of Greenhouse Gases.</h1>
 			</section>
 
 			<h3>
