Make tone on homepage more serious

--- a/public_html/html_project/index.html
+++ b/public_html/html_project/index.html
@@ -30,7 +30,7 @@
 		<main>
 			<h2>We only have <span class="color_emphasis">ONE</span> earth.</h2>
 			<h1>What's happening?</h1>
-			<h1><span class="emphasis">Climate Change</span></h1>
+			<h1><span class="emphasis">Climate Change.</span></h1>
 			<h2>Tap an image to learn more!</h2>
 			<section id="four_boxes_parent">
 				<div class="part">
@@ -90,7 +90,7 @@
 				<li>Weaker national economy</li>
 				<li>Innefficient infrastructure</li>
 			</ul>
-			<h1>And so much more!</h1>
+			<h1>And much more.</h1>
 		</main>
 
 		<footer>
