--- a/public_html/html_project/index.html
+++ b/public_html/html_project/index.html
@@ -114,6 +114,10 @@
 					</p>
 				</div>
 				<div id="footer_right">
+					<p>
+						School phone number:
+						<a href="tel:+12123124800">212-312-4800</a>
+					</p>
 					<p>Date of Creation: 3/12/2023</p>
 					<p><a href="index.html">Go back home</a></p>
 				</div>
