--- a/public_html/html_project/causes.html
+++ b/public_html/html_project/causes.html
@@ -44,6 +44,25 @@
 				trapping heat is known as the "greenhouse effect".
 			</p>
 			<h2>
+				How have our greenhouse gas emissions (concentrations) changed
+				over time?
+			</h2>
+			<div id="increasing_concentration_parent">
+				<img
+					id="concentration_graph"
+					src="img/ghg_concentrations.png"
+					alt="Global atmospheric greenhouse gas concentrations increasing over time."
+				/>
+
+				<h2 id="ipcc_quote">
+					"It is unequivocal that human influence has warmed the
+					atmosphere, ocean and land." -&nbsp;<a
+						href="https://www.ipcc.ch/"
+						>Intergovernmental Panel on Climate Change</a
+					>
+				</h2>
+			</div>
+			<h2>
 				How are greenhouse gases emitted? Through the combustion of
 				fossil fuels.
 			</h2>
@@ -66,26 +85,6 @@
 				width="1000px"
 				alt="Pie chart demonstrating that transportation, electric power, industry, commerical and residential, and agricultural economic sectors emit the most greenhouse gases."
 			/>
-			<h2>
-				How have our greenhouse gas emissions (concentrations) changed
-				over time?
-			</h2>
-			<div id="increasing_concentration_parent">
-				<img
-					id="concentration_graph"
-					src="img/ghg_concentrations.png"
-					alt="Global atmospheric greenhouse gas concentrations increasing over time."
-				/>
-
-				<h2 id="ipcc_quote">
-					"It is unequivocal that human influence has warmed the
-					atmosphere, ocean and land." -&nbsp;<a
-						href="https://www.ipcc.ch/"
-						>Intergovernmental Panel on Climate Change</a
-					>
-				</h2>
-			</div>
-
 			<section id="sources">
 				<h2>Sources:</h2>
 				<p>
@@ -129,6 +128,10 @@
 					</p>
 				</div>
 				<div id="footer_right">
+					<p>
+						School phone number:
+						<a href="tel:+12123124800">212-312-4800</a>
+					</p>
 					<p>Date of Creation: 3/12/2023</p>
 					<p><a href="index.html">Go back home</a></p>
 				</div>
