Fix images on proof and index page

--- a/public_html/html_project/index.html
+++ b/public_html/html_project/index.html
@@ -34,45 +34,53 @@
 			<h2>Tap an image to learn more!</h2>
 			<section id="four_boxes_parent">
 				<div class="part">
-					<img
-						id="chart"
-						width="800px"
-						src="img/chart.jpg"
-						alt="Atmospheric Carbon Dioxide has never been seen at current levels."
-					/>
+					<a href="proof.html">
+						<img
+							id="chart"
+							width="800px"
+							src="img/chart.jpg"
+							alt="Atmospheric Carbon Dioxide has never been seen at current levels."
+						/>
+					</a>
 					<div class="label">
 						<h1>Proof</h1>
 					</div>
 				</div>
 				<div class="part">
-					<img
-						id="chart"
-						width="800px"
-						src="img/traffic.webp"
-						alt="Lots of traffic on highways."
-					/>
+					<a href="causes.html">
+						<img
+							id="chart"
+							width="800px"
+							src="img/traffic.webp"
+							alt="Lots of traffic on highways."
+						/>
+					</a>
 					<div class="label">
 						<h1>Causes</h1>
 					</div>
 				</div>
 				<div class="part">
-					<img
-						id="chart"
-						width="800px"
-						src="img/smog.jpg"
-						alt="Many cities are full of smog."
-					/>
+					<a href="effects.html">
+						<img
+							id="chart"
+							width="800px"
+							src="img/smog.jpg"
+							alt="Many cities are full of smog."
+						/>
+					</a>
 					<div class="label">
 						<h1>Effects</h1>
 					</div>
 				</div>
 				<div class="part">
-					<img
-						id="chart"
-						width="800px"
-						src="img/neighborhood.jpg"
-						alt="New walkable development that is enjoyable."
-					/>
+					<a href="solutions.html">
+						<img
+							id="chart"
+							width="800px"
+							src="img/neighborhood.jpg"
+							alt="New walkable development that is enjoyable."
+						/>
+					</a>
 					<div class="label">
 						<h1>Solutions</h1>
 					</div>
