--- a/public_html/html_project/proof.html
+++ b/public_html/html_project/proof.html
@@ -68,57 +68,70 @@
 			</h2>
 			<section id="four_boxes_parent">
 				<div class="part">
-					<img
-						id="chart"
-						width="800px"
-						src="img/fossil_fuel_companies/chevron.png"
-						alt="Chevron's aknowledgement of climate change."
-					/>
+					<a href="https://www.chevron.com/">
+						<img
+							id="chart"
+							width="800px"
+							src="img/fossil_fuel_companies/chevron.png"
+							alt="Chevron's aknowledgement of climate change."
+						/>
+					</a>
 					<div class="label">
 						<h1>Chevron</h1>
 					</div>
 				</div>
 				<div class="part">
-					<img
-						id="chart"
-						width="800px"
-						src="img/fossil_fuel_companies/exonn.png"
-						alt="Exonn's aknowledgement of climate change."
-					/>
+					<a href="https://corporate.exxonmobil.com/">
+						<img
+							id="chart"
+							width="800px"
+							src="img/fossil_fuel_companies/exonn.png"
+							alt="Exonn's aknowledgement of climate change."
+						/>
+					</a>
 					<div class="label">
 						<h1>Exonn</h1>
 					</div>
 				</div>
 				<div class="part">
-					<img
-						id="chart"
-						width="800px"
-						src="img/fossil_fuel_companies/bp.png"
-						alt="BP's aknowledgement of climate change."
-					/>
+					<a href="https://www.bp.com/">
+						<img
+							id="chart"
+							width="800px"
+							src="img/fossil_fuel_companies/bp.png"
+							alt="BP's aknowledgement of climate change."
+						/>
+					</a>
 					<div class="label">
 						<h1>BP</h1>
 					</div>
 				</div>
 				<div class="part">
-					<img
-						id="chart"
-						width="800px"
-						src="img/fossil_fuel_companies/shell.png"
-						alt="Shell's aknowledgement of climate change."
-					/>
+					<a href="https://www.shell.com/">
+						<img
+							id="chart"
+							width="800px"
+							src="img/fossil_fuel_companies/shell.png"
+							alt="Shell's aknowledgement of climate change."
+						/>
+					</a>
 					<div class="label">
 						<h1>Shell</h1>
 					</div>
 				</div>
 			</section>
-			<h1 class="main_point">
+			<h2 class="main_point">
 				<span class="emphasis_neg">Every fossil fuel company</span>
 				has recognized
 				<span class="emphasis_neg">Climate Change</span>, after
 				<span class="emphasis_neg">decades of denial.</span>
-			</h1>
-			<h2></h2>
+			</h2>
+			<h2>
+				If the literal FOSSIL FUEL comapnies, with the financial
+				interest (and history) of denying climate change, have
+				recognized climate change,
+				<span class="emphasis">why haven't you?</span>
+			</h2>
 			<section id="sources">
 				<h2>Sources:</h2>
 				<p>
