--- a/public_html/html_project/effects.html
+++ b/public_html/html_project/effects.html
@@ -124,6 +124,12 @@
 						>climate.nasa.gov/effects/</a
 					>
 				</p>
+				<p>
+					<a
+						href="https://www.climate.gov/news-features/understanding-climate/climate-change-global-temperature"
+						>www.climate.gov/news-features/understanding-climate/climate-change-global-temperature</a
+					>
+				</p>
 			</section>
 		</main>
 
