--- a/public_html/html_project/solutions.html
+++ b/public_html/html_project/solutions.html
@@ -47,7 +47,7 @@
 				src="img/emitters.png"
 				alt="China, the US, the EU, India, Russia, Japan, and Germany are the top 7 emitters of carbon dioxide."
 			/>
-
+			<h2>We buy a boat-load of oil.</h2>
 			<table>
 				<tr>
 					<th>Country</td>
@@ -142,19 +142,19 @@
 				<h2>Sources:</h2>
 				<p>
 					<a
-						href="https://www.epa.gov/climatechange-science/causes-climate-change"
-						>www.epa.gov/climatechange-science/causes-climate-change</a
+						href="https://www.nrdc.org/stories/what-are-solutions-climate-change"
+						>www.nrdc.org/stories/what-are-solutions-climate-change</a
 					>
 				</p>
 				<p>
 					<a
-						href="https://www.nationalgeographic.com/environment/article/greenhouse-gases"
-						>www.nationalgeographic.com/environment/article/greenhouse-gases</a
+						href="https://www.un.org/en/actnow/ten-actions"
+						>www.un.org/en/actnow/ten-actions</a
 					>
 				</p>
 				<p>
-					<a href="https://climate.nasa.gov/causes/"
-						>climate.nasa.gov/causes/</a
+					<a href="https://www.unep.org/news-and-stories/story/10-ways-you-can-help-fight-climate-crisis"
+						>www.unep.org/news-and-stories/story/10-ways-you-can-help-fight-climate-crisis</a
 					>
 				</p>
 			</section>
