improve layout of solutions page stats

--- a/public_html/html_project/solutions.html
+++ b/public_html/html_project/solutions.html
@@ -41,39 +41,42 @@
 				The top economic powers, developed countries, emit hundreds of
 				times more greenhouse gases then less developed counntries.
 			</h2>
-
-			<img
-				id="emitters_image"
-				src="img/emitters.png"
-				alt="China, the US, the EU, India, Russia, Japan, and Germany are the top 7 emitters of carbon dioxide."
-			/>
-			<h2>We buy a boat-load of oil.</h2>
-			<table>
-				<tr>
-					<th>Country</td>
-					<th>% of imported crude oil</th>
-				</tr>
-				<tr>
-					<td>China</td>
-					<td>22.3%</th>
-				</tr>
-				<tr>
-					<td>USA</td>
-					<td>13.5%</td>
-				</tr>
-				<tr>
-					<td>India</td>
-					<td>10.4%</td>
-				</tr>
-				<tr>
-					<td>South Korea</td>
-					<td>6.5%</td>
-				</tr>
-				<tr>
-					<td>Japan</td>
-					<td>6.1%</td>
-				</tr>
-			</table>
+			<div id="stats">
+				<img
+					id="emitters_image"
+					src="img/emitters.png"
+					alt="China, the US, the EU, India, Russia, Japan, and Germany are the top 7 emitters of carbon dioxide."
+				/>
+				<div>
+					<table>
+						<h2>We buy a boat-load of oil.</h2>
+						<tr>
+							<th>Country</th>
+							<th>% of imported crude oil</th>
+						</tr>
+						<tr>
+							<td>China</td>
+							<td>22.3%</td>
+						</tr>
+						<tr>
+							<td>USA</td>
+							<td>13.5%</td>
+						</tr>
+						<tr>
+							<td>India</td>
+							<td>10.4%</td>
+						</tr>
+						<tr>
+							<td>South Korea</td>
+							<td>6.5%</td>
+						</tr>
+						<tr>
+							<td>Japan</td>
+							<td>6.1%</td>
+						</tr>
+					</table>
+				</div>
+			</div>
 
 			<h2>
 				Everyone, but especially (us) Americans, needs to push for more
@@ -147,13 +150,13 @@
 					>
 				</p>
 				<p>
-					<a
-						href="https://www.un.org/en/actnow/ten-actions"
+					<a href="https://www.un.org/en/actnow/ten-actions"
 						>www.un.org/en/actnow/ten-actions</a
 					>
 				</p>
 				<p>
-					<a href="https://www.unep.org/news-and-stories/story/10-ways-you-can-help-fight-climate-crisis"
+					<a
+						href="https://www.unep.org/news-and-stories/story/10-ways-you-can-help-fight-climate-crisis"
 						>www.unep.org/news-and-stories/story/10-ways-you-can-help-fight-climate-crisis</a
 					>
 				</p>
