Use pngs instead of webp

--- a/public_html/html_project/causes.html
+++ b/public_html/html_project/causes.html
@@ -81,7 +81,7 @@
 			<h2>Where do our Greenhouse Gas emissions come from?</h2>
 			<img
 				id="pie_chart"
-				src="img/ghg.webp"
+				src="img/ghg.png"
 				width="1000px"
 				alt="Pie chart demonstrating that transportation, electric power, industry, commerical and residential, and agricultural economic sectors emit the most greenhouse gases."
 			/>
