--- a/public_html/html_project/effects.html
+++ b/public_html/html_project/effects.html
@@ -103,7 +103,7 @@
 			<div id="effects_parent">
 				<img
 					id="effects_image"
-					src="img/threats.webp"
+					src="img/threats.png"
 					alt="Global atmospheric greenhouse gas concentrations increasing over time."
 				/>
 
