--- a/public_html/html_project/index.html
+++ b/public_html/html_project/index.html
@@ -51,7 +51,7 @@
 						<img
 							id="chart"
 							width="800px"
-							src="img/traffic.webp"
+							src="img/traffic.png"
 							alt="Lots of traffic on highways."
 						/>
 					</a>
