Fix spelling and specify file size

--- a/public_html/html_project/causes.html
+++ b/public_html/html_project/causes.html
@@ -49,6 +49,7 @@
 			</h2>
 			<div id="increasing_concentration_parent">
 				<img
+					width="1000px"
 					id="concentration_graph"
 					src="img/ghg_concentrations.png"
 					alt="Global atmospheric greenhouse gas concentrations increasing over time."
