--- a/public_html/html_project/effects.html
+++ b/public_html/html_project/effects.html
@@ -102,6 +102,7 @@
 
 			<div id="effects_parent">
 				<img
+					width="1000px"
 					id="effects_image"
 					src="img/threats.png"
 					alt="Global atmospheric greenhouse gas concentrations increasing over time."
