--- a/public_html/html_project/proof.html
+++ b/public_html/html_project/proof.html
@@ -46,9 +46,8 @@
 					</video>
 					<p>
 						By Ronnie Williams, Climate Town,
-						<a href="https://youtu.be/mK5TbGvvluk"
-							>original video</a
-						>
+						<a href="https://youtu.be/mK5TbGvvluk">original video</a
+						>, 95MB
 					</p>
 				</div>
 			</section>
