--- a/public_html/html_project/solutions.html
+++ b/public_html/html_project/solutions.html
@@ -39,13 +39,14 @@
 			</h2>
 			<h2>
 				The top economic powers, developed countries, emit hundreds of
-				times more greenhouse gases then less developed counntries.
+				times more greenhouse gases then less developed countries.
 			</h2>
 			<div id="stats">
 				<img
 					id="emitters_image"
 					src="img/emitters.png"
 					alt="China, the US, the EU, India, Russia, Japan, and Germany are the top 7 emitters of carbon dioxide."
+					width="600px"
 				/>
 				<div>
 					<table>
